Remove unused code detected by SonarLint